--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/react": "^16.0.1",
     "@types/node": "^20.14.2",
+    "history": "^5.3.0",
     "js-base64": "^3.7.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,6 +26,7 @@
     "react-ionicons": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "redux-first-history": "^5.2.0",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
